kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jsonbase-deployment
spec:
  selector:
    matchLabels:
      app: jsonbase
  template:
    metadata:
      labels:
        app: jsonbase
    spec:
      containers:
      - name: jsonbase
        image: jsonbase
        resources:
          requests:
            memory: "32Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
