kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jsonbase-service
spec:
  type: NodePort
  selector:
    app: jsonbase
  ports:
  - port: 4000
    targetPort: 80
